--- a/client/style.css
+++ b/client/style.css
@@ -3,19 +3,139 @@ html, body {
   width: 100%;
   margin: 0;
   padding: 0;
+  font-family: 'Poppins', sans-serif;
+  color: white;
+  background-color: dodgerblue;
 }
 
-#top {
+.yellow {
+  color: goldenrod;
+}
+
+.orange {
+  color: orange;
+}
+
+.red {
+  color: red;
+}
+
+header {
+  width: 100%;
+  margin: auto;
+  padding: 0.5em 0;
   text-align: center;
-  margin: 0 auto;
+  font-weight: 600;
+  color: dodgerblue;
+  background-color: white;
 }
 
-#top h1 {
-  font-size: 2em;
+h1, h2 {
+  font-family: 'Raleway', sans-serif;
 }
 
-#content {
-  margin-top: 100px;
-  font-size: 2em;
-  text-align: center;
+#modal {
+  display: none;
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgba(0,0,0,0.4);
+}
+
+#createTaskForm {
+  width: 40%;
+  margin: 15% auto;
+  padding: 20px;
+  border: 1px solid #888;
+  border-radius: 1em;
+  color: black;
+  background-color: #fefefe;
+}
+
+h2 {
+  border-bottom: 1pt solid darkgray;
+  padding-bottom: 0.5em;
+}
+
+#closeButton {
+  position: relative;
+  width: 100%;
+}
+
+#closeButton i {
+  float: right;
+}
+
+#taskForm {
+  display: inline-grid;
+  width: 100%;
+}
+
+#taskForm label, p {
+  margin: 0;
+  padding: 0.5em 0;
+}
+
+#priority label {
+  font-family: 'Raleway', sans-serif;
+  font-weight: 600;
+}
+
+#button-layout {
+  display: flex;
+  justify-content: space-around;
+}
+
+#taskForm .submit {
+  width: 100%;
+  margin-top: 0.5em;
+  padding: 0.5em 0;
+  font-family: 'Raleway', sans-serif;
+  font-size: 12pt;
+  font-weight: 600;
+  border: none;
+  border-radius: 2em;
+  color: white;
+  background-color: dodgerblue;
+}
+
+main {
+  height: 100%;
+  margin: 5% 10%;
+  border: 1px solid black;
+  border-bottom: none;
+  box-shadow: 2px 2px 5px black;
+  border-radius: 3em 3em 0em 0em;
+  color: black;
+  background-color: white;
+}
+
+#tasksSection {
+  padding: 2em;
+}
+
+.sort {
+  float: right;
+}
+
+#sort {
+  font-family: 'Raleway';
+  font-weight: 600;
+}
+
+.addButton {
+  float: left;
+}
+
+#refreshTasks {
+  float: right;
+  margin-top: 1.3em;
+}
+
+#refreshTasks input {
+  display: none;
 }
