--- a/client/style.css
+++ b/client/style.css
@@ -26,6 +26,7 @@ header {
   padding: 0.5em 0;
   text-align: center;
   font-weight: 600;
+  border-bottom: 2px solid black;
   color: dodgerblue;
   background-color: white;
 }
@@ -104,7 +105,10 @@ h2 {
 }
 
 main {
-  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  min-height: 80%;
   margin: 5% 10%;
   border: 1px solid black;
   border-bottom: none;
@@ -122,7 +126,7 @@ main {
   float: right;
 }
 
-#sort {
+#sort, #completedSort {
   font-family: 'Raleway';
   font-weight: 600;
 }
@@ -131,11 +135,24 @@ main {
   float: left;
 }
 
-#refreshTasks {
+.refresh {
   float: right;
   margin-top: 1.3em;
 }
 
-#refreshTasks input {
+.refresh input {
   display: none;
+}
+
+#completedTasksSection {
+  padding: 2em 2em 2em 2em;
+  outline: 1px solid black;
+  border-bottom: none;
+  box-shadow: 4px 2px 5px black;
+  border-radius: 3em 3em 0 0;
+  background-color: white;
+}
+
+.completedSort {
+  text-align: right;
 }
